[package]
name = "tiger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
chumsky = "1.0.0-alpha.7"
itertools = "0.12.1"
lasso = "0.7.2"
rpds = "1.1.0"

[dev-dependencies]
assert_matches = "1.5.0"
